@@ -9,6 +9,7 @@ DFHack Future
     New scripts
         view-item-info: adds information and customisable descriptions to item viewscreens
         fix-ster:  changes fertility/sterility of animals or dwarves
+        burial:  sets all unowned coffins to allow burial ("-pets" to allow pets too)
     New tweaks
     New features
         dwarfmonitor date format can be modified (see Readme)
